# ak_lab_4

./: .gitignore  .pre-commit-config.yaml  DESCRIPTION.md  README.md  check_scheme.md  lab4-task.md  prob1.dbg  pyproject.toml  variant.txt
.github/workflows/: ci.yml
docs/: new_scheme.drawio  new_scheme_2.drawio  new_scheme_3.drawio  new_scheme_4.drawio  proc_scheme.drawio
src/: isa.py  machine.py  microcode_memory.py  run_code.py  translator.py
tests/: test_golden.py
tests/golden/: README.md
tests/golden/cat/: expected_debug.txt  expected_trace.txt  source.asm
tests/golden/double_precision/: expected_debug.txt  expected_output.txt  expected_trace.txt  source.asm
tests/golden/features/: expected_debug.txt  expected_output.txt  expected_trace.txt  source.asm
tests/golden/hello/: expected_debug.txt  expected_trace.txt  source.asm
tests/golden/hello_user_name/: expected_debug.txt  expected_output.txt  expected_trace.txt  source.asm
tests/golden/prob1/: expected_debug.txt  expected_trace.txt  source.asm
tests/golden/sort/: expected_debug.txt  expected_trace.txt  input.txt  source.asm
