[project]
name = "ak-lab-4"
version = "0.1.0"
description = "AK lab 4"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
run_code = "src.run_code:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.1",
    "ruff>=0.15.5",
]
